--- a/client-web/public/locales/en/common.json
+++ b/client-web/public/locales/en/common.json
@@ -1,3 +1,6 @@
 {
-  "title": "World Cup 2022 Betting App"
+  "title": "World Cup 2022 Betting App",
+  "pools": "Pools",
+  "lang-pt": "Português",
+  "lang-en": "English"
 }
