--- a/client-web/public/locales/pt/common.json
+++ b/client-web/public/locales/pt/common.json
@@ -1,3 +1,6 @@
 {
-  "title": "Bolão da Copa 2022"
+  "title": "Bolão da Copa 2022",
+  "pools": "Bolões",
+  "lang-pt": "Português",
+  "lang-en": "English"
 }
