style the page and add translations

--- a/client-web/public/locales/en/common.json
+++ b/client-web/public/locales/en/common.json
@@ -1,5 +1,7 @@
 {
   "title": "World Cup 2022 Betting App",
+  "subTitle": "World Cup Qatar 2022 Betting Pool",
+  "mainText": "Create your own betting pool of the World Cup and share it with friends!",
   "pools": "Pools",
   "lang-pt": "Português",
   "lang-en": "English"
