--- a/client-web/public/locales/pt/common.json
+++ b/client-web/public/locales/pt/common.json
@@ -1,5 +1,7 @@
 {
   "title": "Bolão da Copa 2022",
+  "subTitle": "Bolão da Copa do Mundo do Qatar 2022",
+  "mainText": "Crie o seu bolão da Copa do Mundo e compartilhe com os amigos!",
   "pools": "Bolões",
   "lang-pt": "Português",
   "lang-en": "English"
