done client web

--- a/client-web/public/locales/pt/common.json
+++ b/client-web/public/locales/pt/common.json
@@ -8,6 +8,7 @@
   "infoCreatePool": "Após criar seu bolão, você receberá um código que poderá usar para convidar outras pessoas.",
   "infoPoolsCreated": "Bolões criados",
   "infoBetsMade": "Palpites enviados",
+  "poolCode": "Bolão criado com sucesso! Código copiado para sua Área de Transferência",
   "pools": "Bolões",
   "lang-pt": "Português",
   "lang-en": "English"
