--- a/client-web/public/locales/en/common.json
+++ b/client-web/public/locales/en/common.json
@@ -8,6 +8,7 @@
   "infoCreatePool": "After send the form, you will receive a code that you can use to invite other people to play.",
   "infoPoolsCreated": "Betting pools created",
   "infoBetsMade": "Bets made",
+  "poolCode": "Betting pool created! Poll code copied to your Clipboard",
   "pools": "Pools",
   "lang-pt": "Português",
   "lang-en": "English"
